--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -18,3 +18,18 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+img {
+    height: 300px;
+    width: 300px;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    list-style-type: none;
+    row-gap: 20px;
+    column-gap: 20px;
+}
